--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^5.0.0",
     "any-observable": "^0.5.1",
-    "astro": "^3.0.12"
+    "astro": "^3.0.12",
+    "tailwindcss": "^3.0.24"
   }
 }
