--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@markdoc/markdoc": "^0.4.0",
     "@types/node": "20.8.6",
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.13",
     "autoprefixer": "10.4.16",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.5",
+    "frontmatter": "^0.0.3",
+    "html-react-parser": "^5.1.10",
     "next": "13.5.5",
     "postcss": "8.4.31",
     "react": "18.2.0",
